Increasing the PermGen space for surefire plugin<Dileep/Shruthi>